--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-.env*
-.vscode
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+
+venv/
+.env
+.env.*
+pyvenv.cfg
+
+
+
+*.log
+logs/
+.scrapy/
+
+
+
+Web_Scraping/event_scraper/data/*.json
+
+
+
+.vscode/
+.DS_Store
