--- a/data_extraction/requirements.txt
+++ b/data_extraction/requirements.txt
@@ -13,3 +13,7 @@ playwright>=1.57.0
 
 # Config via .env (optional)
 python-dotenv>=1.0.0
+
+# For geocoding + loading into Supabase
+requests>=2.31.0
+supabase>=2.0.0
